# opcua

./: .gitignore  02.py  03.py  Dockerfile  docker-compose.yaml  main.py  nginx-service.yaml  opc-plc.yaml  opc-server-kubernetes.yaml  opc-server-services.yml  privileged-pod.yaml  pyproject.toml  send.py  sub.py
dockerfile/: Dockerfile
res/customized_node/: node.json
