[tool.poetry]
name = "opcua_dev"
version = "0.1.0"
description = ""
authors = ["Jack Kuo <chunchiehdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opcua = "^0.98.13"
cryptography = "^42.0.8"
asyncua = {git = "https://github.com/FreeOpcUa/opcua-asyncio.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
